# CMake-CPP-setup

./: .gitignore  CMakeLists.txt  README.md  removeBuild.py
app/: CMakeLists.txt  main.cc
configured/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt  my_lib.cc
